test/errors/type/collections/set/__lt3.yasl
echo collections.set().__lt(1, true)
